--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.8.9</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework</groupId>
